--- a/memorious/templates/layout.html
+++ b/memorious/templates/layout.html
@@ -35,6 +35,9 @@
     {% include "footer.html" with context %}
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    {% assets "js" %}
+      <script src="{{ ASSET_URL }}"></script>
+    {% endassets %}
   </body>
 </html>
