--- a/memorious/templates/entity.html
+++ b/memorious/templates/entity.html
@@ -41,10 +41,7 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-9">
-      Source:
-      <a href="{{entity.dataset.info_url}}" target="_blank">
-        {{entity.dataset.label}}
-      </a>
+      Source: {{macros.dataset_link(entity.dataset)}}
     </div>
   </div>
 
